# Kursowaya3-

./: .coverage  README.md  pyproject.toml  requirements.txt
src/: README.md  main.py  pyproject.toml  utils.py
tests/: test_executed.py  test_get_date.py  test_get_last_five.py  test_get_sorted.py  test_mask_card_number.py
