[tool.poetry]
name = "kyrsowaya-3"
version = "0.1.0"
description = ""
authors = ["Josef Vas <yovzhi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
